--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -26,6 +26,28 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
+<td>SpringStarter.SpringStarter.LeavePageTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>applyLeave</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>SpringStarter.SpringStarter.DataProviderTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
