--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,32 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b09ffa">  <td>24/01/28 19:57:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.clickOnAddUserButton()[pri:0, instance:SpringStarter.SpringStarter.CreateUser@5677323c]">clickOnAddUserButton</td> 
-  <td>main@1683662486</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/28 19:57:52</td>   <td>-4573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.clickOnAdmin()[pri:0, instance:SpringStarter.SpringStarter.CreateUser@5677323c]">clickOnAdmin</td> 
-  <td>main@1683662486</td>   <td></td> </tr>
-<tr bgcolor="ca7889">  <td>24/01/28 19:57:26</td>   <td>-30368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.clickOnAdmin()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@51c668e3]">clickOnAdmin</td> 
-  <td>main@1683662486</td>   <td></td> </tr>
-<tr bgcolor="ca7889">  <td>24/01/28 19:57:06</td>   <td>-50324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.doLogin()[pri:1, instance:SpringStarter.SpringStarter.DataProviderTest@51c668e3]">doLogin</td> 
-  <td>main@1683662486</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/28 19:58:31</td>   <td>34095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@5677323c]">enterUserDetails</td> 
-  <td>main@1683662486</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/28 19:58:31</td>   <td>34095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@5677323c]">enterUserDetails</td> 
-  <td>main@1683662486</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/28 19:58:31</td>   <td>34095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@5677323c]">enterUserDetails</td> 
-  <td>main@1683662486</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/28 19:58:31</td>   <td>34095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@5677323c]">enterUserDetails</td> 
-  <td>main@1683662486</td>   <td></td> </tr>
-<tr bgcolor="81a7ac">  <td>24/01/28 19:57:50</td>   <td>-6836</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DashBoardvalidation.getDetailsOfWidgetsOnDashBoard()[pri:0, instance:SpringStarter.SpringStarter.DashBoardvalidation@537f60bf]">getDetailsOfWidgetsOnDashBoard</td> 
-  <td>main@1683662486</td>   <td></td> </tr>
-<tr bgcolor="ca7889">  <td>24/01/28 19:57:41</td>   <td>-15674</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.getUserCountOnAdminPage()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@51c668e3]">getUserCountOnAdminPage</td> 
-  <td>main@1683662486</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>24/01/28 19:56:58</td>   <td>-58491</td> <td title="&gt;&gt;BaseTestClass.initDriver()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@51c668e3]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1683662486</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/28 19:58:06</td>   <td>9604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.selectOptionFromDropDown(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@5677323c]">selectOptionFromDropDown</td> 
-  <td>main@1683662486</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/28 19:58:06</td>   <td>9604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.selectOptionFromDropDown(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@5677323c]">selectOptionFromDropDown</td> 
-  <td>main@1683662486</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>24/01/28 19:58:36</td>   <td>39965</td> <td title="&lt;&lt;BaseTestClass.tearDown()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@51c668e3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1683662486</td>   <td></td> </tr>
+<tr bgcolor="98ac89">  <td>24/01/29 00:23:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LeavePageTest.applyLeave()[pri:0, instance:SpringStarter.SpringStarter.LeavePageTest@4d154ccd]">applyLeave</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="b09ffa">  <td>24/01/29 00:23:08</td>   <td>-40375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.clickOnAddUserButton()[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">clickOnAddUserButton</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="ca7889">  <td>24/01/29 00:22:36</td>   <td>-71917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.clickOnAdmin()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@6221a451]">clickOnAdmin</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="b09ffa">  <td>24/01/29 00:23:04</td>   <td>-44658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.clickOnAdmin()[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">clickOnAdmin</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="ca7889">  <td>24/01/29 00:22:22</td>   <td>-86373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.doLogin()[pri:1, instance:SpringStarter.SpringStarter.DataProviderTest@6221a451]">doLogin</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="b09ffa">  <td>24/01/29 00:23:43</td>   <td>-5774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">enterUserDetails</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="b09ffa">  <td>24/01/29 00:23:43</td>   <td>-5774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">enterUserDetails</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="b09ffa">  <td>24/01/29 00:23:43</td>   <td>-5774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">enterUserDetails</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="b09ffa">  <td>24/01/29 00:23:43</td>   <td>-5774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">enterUserDetails</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="81a7ac">  <td>24/01/29 00:23:01</td>   <td>-47013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DashBoardvalidation.getDetailsOfWidgetsOnDashBoard()[pri:0, instance:SpringStarter.SpringStarter.DashBoardvalidation@18df8434]">getDetailsOfWidgetsOnDashBoard</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="ca7889">  <td>24/01/29 00:22:52</td>   <td>-56254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.getUserCountOnAdminPage()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@6221a451]">getUserCountOnAdminPage</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="7cdc6d">  <td>24/01/29 00:22:15</td>   <td>-93744</td> <td title="&gt;&gt;BaseTestClass.initDriver()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@6221a451]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="b09ffa">  <td>24/01/29 00:23:18</td>   <td>-30099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.selectOptionFromDropDown(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">selectOptionFromDropDown</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="b09ffa">  <td>24/01/29 00:23:18</td>   <td>-30099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.selectOptionFromDropDown(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">selectOptionFromDropDown</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="7cdc6d">  <td>24/01/29 00:24:11</td>   <td>22445</td> <td title="&lt;&lt;BaseTestClass.tearDown()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@6221a451]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@657736958</td>   <td></td> </tr>
 </table>
