--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,23 +8,45 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">13</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">108,506</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">66</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="8">SpringStarter.SpringStarter.CreateUser</td><td><a href="#m0">clickOnAddUserButton</a></td><td rowspan="1">1706467988482</td><td rowspan="1">3149</td></tr><tr class="passedeven"><td><a href="#m1">clickOnAdmin</a></td><td rowspan="1">1706467984199</td><td rowspan="1">4278</td></tr><tr class="passedeven"><td><a href="#m2">enterUserDetails</a></td><td rowspan="4">1706468004877</td><td rowspan="4">7064</td></tr><tr class="passedeven"><td><a href="#m3">enterUserDetails</a></td></tr><tr class="passedeven"><td><a href="#m4">enterUserDetails</a></td></tr><tr class="passedeven"><td><a href="#m5">enterUserDetails</a></td></tr><tr class="passedeven"><td><a href="#m6">selectOptionFromDropDown</a></td><td rowspan="2">1706467998758</td><td rowspan="2">6114</td></tr><tr class="passedeven"><td><a href="#m7">selectOptionFromDropDown</a></td></tr><tr class="passedodd"><td rowspan="1">SpringStarter.SpringStarter.DashBoardvalidation</td><td><a href="#m8">getDetailsOfWidgetsOnDashBoard</a></td><td rowspan="1">1706467981844</td><td rowspan="1">2351</td></tr><tr class="passedeven"><td rowspan="3">SpringStarter.SpringStarter.DataProviderTest</td><td><a href="#m9">clickOnAdmin</a></td><td rowspan="1">1706467956940</td><td rowspan="1">15653</td></tr><tr class="passedeven"><td><a href="#m10">doLogin</a></td><td rowspan="1">1706467942484</td><td rowspan="1">14444</td></tr><tr class="passedeven"><td><a href="#m11">getUserCountOnAdminPage</a></td><td rowspan="1">1706467972603</td><td rowspan="1">9230</td></tr><tr class="passedodd"><td rowspan="1">SpringStarter.SpringStarter.LeavePageTest</td><td><a href="#m12">applyLeave</a></td><td rowspan="1">1706468028857</td><td rowspan="1">22063</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">SpringStarter.SpringStarter.TestListenersImpl</td><td><a href="#m0">testStart</a></td><td rowspan="1">1706544096689</td><td rowspan="1">20</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">SpringStarter.SpringStarter.CreateUser#clickOnAddUserButton</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">SpringStarter.SpringStarter.CreateUser#clickOnAdmin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">SpringStarter.SpringStarter.CreateUser#enterUserDetails</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Employee Name</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">SpringStarter.SpringStarter.CreateUser#enterUserDetails</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Username</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">SpringStarter.SpringStarter.CreateUser#enterUserDetails</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Password</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">SpringStarter.SpringStarter.CreateUser#enterUserDetails</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Confirm Password</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">SpringStarter.SpringStarter.CreateUser#selectOptionFromDropDown</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Status</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">SpringStarter.SpringStarter.CreateUser#selectOptionFromDropDown</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>User Role</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">SpringStarter.SpringStarter.DashBoardvalidation#getDetailsOfWidgetsOnDashBoard</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">SpringStarter.SpringStarter.DataProviderTest#clickOnAdmin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">SpringStarter.SpringStarter.DataProviderTest#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m11">SpringStarter.SpringStarter.DataProviderTest#getUserCountOnAdminPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m12">SpringStarter.SpringStarter.LeavePageTest#applyLeave</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">SpringStarter.SpringStarter.TestListenersImpl#testStart</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [false] but found [true]
+	at org.testng.Assert.fail(Assert.java:110)
+	at org.testng.Assert.failNotEquals(Assert.java:1577)
+	at org.testng.Assert.assertFalse(Assert.java:78)
+	at org.testng.Assert.assertFalse(Assert.java:88)
+	at SpringStarter.SpringStarter.TestListenersImpl.testStart(TestListenersImpl.java:17)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
+	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:139)
+	at org.testng.internal.invokers.TestInvoker.invokeMethod(TestInvoker.java:677)
+	at org.testng.internal.invokers.TestInvoker.invokeTestMethod(TestInvoker.java:221)
+	at org.testng.internal.invokers.MethodRunner.runInSequence(MethodRunner.java:50)
+	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:969)
+	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:194)
+	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:148)
+	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:128)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at org.testng.TestRunner.privateRun(TestRunner.java:829)
+	at org.testng.TestRunner.run(TestRunner.java:602)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:437)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:431)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:391)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:330)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1256)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1176)
+	at org.testng.TestNG.runSuites(TestNG.java:1099)
+	at org.testng.TestNG.run(TestNG.java:1067)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
