--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,34 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="98ac89">  <td>24/01/29 00:23:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LeavePageTest.applyLeave()[pri:0, instance:SpringStarter.SpringStarter.LeavePageTest@4d154ccd]">applyLeave</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/29 00:23:08</td>   <td>-40375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.clickOnAddUserButton()[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">clickOnAddUserButton</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="ca7889">  <td>24/01/29 00:22:36</td>   <td>-71917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.clickOnAdmin()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@6221a451]">clickOnAdmin</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/29 00:23:04</td>   <td>-44658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.clickOnAdmin()[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">clickOnAdmin</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="ca7889">  <td>24/01/29 00:22:22</td>   <td>-86373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.doLogin()[pri:1, instance:SpringStarter.SpringStarter.DataProviderTest@6221a451]">doLogin</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/29 00:23:43</td>   <td>-5774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">enterUserDetails</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/29 00:23:43</td>   <td>-5774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">enterUserDetails</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/29 00:23:43</td>   <td>-5774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">enterUserDetails</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/29 00:23:43</td>   <td>-5774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">enterUserDetails</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="81a7ac">  <td>24/01/29 00:23:01</td>   <td>-47013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DashBoardvalidation.getDetailsOfWidgetsOnDashBoard()[pri:0, instance:SpringStarter.SpringStarter.DashBoardvalidation@18df8434]">getDetailsOfWidgetsOnDashBoard</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="ca7889">  <td>24/01/29 00:22:52</td>   <td>-56254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.getUserCountOnAdminPage()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@6221a451]">getUserCountOnAdminPage</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="7cdc6d">  <td>24/01/29 00:22:15</td>   <td>-93744</td> <td title="&gt;&gt;BaseTestClass.initDriver()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@6221a451]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/29 00:23:18</td>   <td>-30099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.selectOptionFromDropDown(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">selectOptionFromDropDown</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>24/01/29 00:23:18</td>   <td>-30099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.selectOptionFromDropDown(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@65c7a252]">selectOptionFromDropDown</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="7cdc6d">  <td>24/01/29 00:24:11</td>   <td>22445</td> <td title="&lt;&lt;BaseTestClass.tearDown()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@6221a451]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="867da0">  <td>24/01/29 21:10:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LeavePageTest.applyLeave()[pri:0, instance:SpringStarter.SpringStarter.LeavePageTest@4686afc2]">applyLeave</td> 
+  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>24/01/29 21:09:41</td>   <td>-45829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.clickOnAddUserButton()[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">clickOnAddUserButton</td> 
+  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="81a7ac">  <td>24/01/29 21:08:57</td>   <td>-89756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.clickOnAdmin()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@3012646b]">clickOnAdmin</td> 
+  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>24/01/29 21:09:39</td>   <td>-47707</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.clickOnAdmin()[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">clickOnAdmin</td> 
+  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="81a7ac">  <td>24/01/29 21:08:43</td>   <td>-103596</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.doLogin()[pri:1, instance:SpringStarter.SpringStarter.DataProviderTest@3012646b]">doLogin</td> 
+  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>24/01/29 21:10:21</td>   <td>-5939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">enterUserDetails</td> 
+  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>24/01/29 21:10:21</td>   <td>-5939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">enterUserDetails</td> 
+  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>24/01/29 21:10:21</td>   <td>-5939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">enterUserDetails</td> 
+  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>24/01/29 21:10:21</td>   <td>-5939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">enterUserDetails</td> 
+  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="98ac89">  <td>24/01/29 21:09:25</td>   <td>-61575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DashBoardvalidation.getDetailsOfWidgetsOnDashBoard()[pri:0, instance:SpringStarter.SpringStarter.DashBoardvalidation@4d154ccd]">getDetailsOfWidgetsOnDashBoard</td> 
+  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="81a7ac">  <td>24/01/29 21:09:12</td>   <td>-74543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.getUserCountOnAdminPage()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@3012646b]">getUserCountOnAdminPage</td> 
+  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>24/01/29 21:08:35</td>   <td>-111387</td> <td title="&gt;&gt;BaseTestClass.initDriver()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@3012646b]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>24/01/29 21:09:54</td>   <td>-32499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.selectOptionFromDropDown(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">selectOptionFromDropDown</td> 
+  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>24/01/29 21:09:54</td>   <td>-32499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.selectOptionFromDropDown(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">selectOptionFromDropDown</td> 
+  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>24/01/29 21:10:58</td>   <td>31063</td> <td title="&lt;&lt;BaseTestClass.tearDown()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@3012646b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@867988177</td>   <td></td> </tr>
 </table>
