--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,11 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>SpringStarter.SpringStarter.DataProviderTest.validateUserDeletion<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating if the users are deleted or not</i></td></tr>
-<tr><td>SpringStarter.SpringStarter.BaseTestClass.initDriver</td></tr>
-<tr><td>SpringStarter.SpringStarter.BaseTestClass.tearDown</td></tr>
-<tr><td>SpringStarter.SpringStarter.BaseTestClass.initDriver</td></tr>
-<tr><td>SpringStarter.SpringStarter.DataProviderTest.deletedSelectedUsers<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Deleting the selected users</i></td></tr>
-<tr><td>SpringStarter.SpringStarter.BaseTestClass.tearDown</td></tr>
-<tr><td>SpringStarter.SpringStarter.BaseTestClass.initDriver</td></tr>
-<tr><td>SpringStarter.SpringStarter.DataProviderTest.perfromMultiSelction</td></tr>
-<tr><td>SpringStarter.SpringStarter.BaseTestClass.tearDown</td></tr>
+<tr><td>SpringStarter.SpringStarter.OrangeHRMParallelExecutionUsingThreadLocal.perfromMultiSelction</td></tr>
+<tr><td>SpringStarter.SpringStarter.OrangeHRMParallelExecutionUsingThreadLocal.deletedSelectedUsers<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Deleting the selected users</i></td></tr>
+<tr><td>SpringStarter.SpringStarter.OrangeHRMParallelExecutionUsingThreadLocal.validateUserDeletion<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating if the users are deleted or not</i></td></tr>
 </table>
