--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,34 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="867da0">  <td>24/01/29 21:10:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LeavePageTest.applyLeave()[pri:0, instance:SpringStarter.SpringStarter.LeavePageTest@4686afc2]">applyLeave</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>24/01/29 21:09:41</td>   <td>-45829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.clickOnAddUserButton()[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">clickOnAddUserButton</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="81a7ac">  <td>24/01/29 21:08:57</td>   <td>-89756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.clickOnAdmin()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@3012646b]">clickOnAdmin</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>24/01/29 21:09:39</td>   <td>-47707</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.clickOnAdmin()[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">clickOnAdmin</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="81a7ac">  <td>24/01/29 21:08:43</td>   <td>-103596</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.doLogin()[pri:1, instance:SpringStarter.SpringStarter.DataProviderTest@3012646b]">doLogin</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>24/01/29 21:10:21</td>   <td>-5939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">enterUserDetails</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>24/01/29 21:10:21</td>   <td>-5939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">enterUserDetails</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>24/01/29 21:10:21</td>   <td>-5939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">enterUserDetails</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>24/01/29 21:10:21</td>   <td>-5939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.enterUserDetails(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">enterUserDetails</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="98ac89">  <td>24/01/29 21:09:25</td>   <td>-61575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DashBoardvalidation.getDetailsOfWidgetsOnDashBoard()[pri:0, instance:SpringStarter.SpringStarter.DashBoardvalidation@4d154ccd]">getDetailsOfWidgetsOnDashBoard</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="81a7ac">  <td>24/01/29 21:09:12</td>   <td>-74543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.getUserCountOnAdminPage()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@3012646b]">getUserCountOnAdminPage</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="98cf9b">  <td>24/01/29 21:08:35</td>   <td>-111387</td> <td title="&gt;&gt;BaseTestClass.initDriver()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@3012646b]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>24/01/29 21:09:54</td>   <td>-32499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.selectOptionFromDropDown(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">selectOptionFromDropDown</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>24/01/29 21:09:54</td>   <td>-32499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.selectOptionFromDropDown(java.lang.String)[pri:0, instance:SpringStarter.SpringStarter.CreateUser@229c6181]">selectOptionFromDropDown</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="98cf9b">  <td>24/01/29 21:10:58</td>   <td>31063</td> <td title="&lt;&lt;BaseTestClass.tearDown()[pri:0, instance:SpringStarter.SpringStarter.DataProviderTest@3012646b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="c2bf82">  <td>24/01/31 07:55:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRMParallelExecutionUsingThreadLocal.clickOnAdmin()[pri:0, instance:SpringStarter.SpringStarter.OrangeHRMParallelExecutionUsingThreadLocal@2d35442b]">clickOnAdmin</td> 
+  <td>TestNG-tests-3@1031968647</td>   <td></td> </tr>
+<tr bgcolor="c2bf82">  <td>24/01/31 07:55:16</td>   <td>-38524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRMParallelExecutionUsingThreadLocal.doLogin()[pri:1, instance:SpringStarter.SpringStarter.OrangeHRMParallelExecutionUsingThreadLocal@2d35442b]">doLogin</td> 
+  <td>TestNG-tests-3@1031968647</td>   <td></td> </tr>
+<tr bgcolor="c2bf82">  <td>24/01/31 07:56:04</td>   <td>9727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRMParallelExecutionUsingThreadLocal.getUserCountOnAdminPage()[pri:0, instance:SpringStarter.SpringStarter.OrangeHRMParallelExecutionUsingThreadLocal@2d35442b]">getUserCountOnAdminPage</td> 
+  <td>TestNG-tests-3@1031968647</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>24/01/31 07:55:15</td>   <td>-39253</td> <td title="&gt;&gt;ThreadLocalBaseTestClass.initDriver()[pri:0, instance:SpringStarter.SpringStarter.OrangeHRMParallelExecutionUsingThreadLocal@2d35442b]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3392189</td>   <td></td> </tr>
+<tr bgcolor="81a7ac">  <td>24/01/31 07:55:16</td>   <td>-38524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpenGooglePage.launchGoogle()[pri:0, instance:SpringStarter.SpringStarter.OpenGooglePage@c1fca1e]">launchGoogle</td> 
+  <td>TestNG-tests-1@1998882269</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>24/01/31 07:56:14</td>   <td>20192</td> <td title="&lt;&lt;ThreadLocalBaseTestClass.tearDown()[pri:0, instance:SpringStarter.SpringStarter.OrangeHRMParallelExecutionUsingThreadLocal@2d35442b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3392189</td>   <td></td> </tr>
+<tr bgcolor="eacbab">  <td>24/01/31 07:55:16</td>   <td>-38524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Guru99Demo.testScrollUpAndDown()[pri:0, instance:SpringStarter.SpringStarter.Guru99Demo@2a551a63]">testScrollUpAndDown</td> 
+  <td>TestNG-tests-2@2041264753</td>   <td></td> </tr>
 </table>
